Update Jest configuration for improved performance and add isolated modules support in TypeScript; introduce fast test script in package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
+    "test:fast": "jest --runInBand --silent",
     "test-watch": "jest --watchAll",
     "build": "tsc && tsc-alias",
     "start": "node dist/server.js",
