--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
+    "isolatedModules": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
