--- a/backend/package.json
+++ b/backend/package.json
@@ -27,12 +27,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^131.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "express-winston": "^4.2.0",
     "googleapis": "^123.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
@@ -47,9 +49,11 @@
     "phone": "^3.1.42",
     "puppeteer": "^24.1.1",
     "puppeteer-core": "^24.1.1",
-    "@sparticuz/chromium": "^131.0.0",
     "uuid": "^11.0.5",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-mongodb": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
