Update TypeScript build configuration by introducing a new tsconfig.build.json file for improved build performance. Modify package.json scripts to utilize the new configuration and streamline the build process by excluding test files from compilation.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,5 +18,5 @@
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["src"],
-  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "node_modules"]
+  "exclude": ["node_modules"]
 }
