--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
     "test": "jest",
     "test:fast": "jest --runInBand --silent",
     "test-watch": "jest --watchAll",
-    "build": "npm run lint && npm run test && tsc && tsc-alias",
-    "build-test": "tsc && tsc-alias",
+    "build": "npm run lint && npm run test && tsc --project tsconfig.build.json && tsc-alias",
+    "build-fast": "tsc --project tsconfig.build.json && tsc-alias",
     "start": "node dist/server.js",
     "serve": "tsx watch src/server.ts",
     "migrate:create:users": "knex migrate:make --env=development",
