chore: Update build script to include testing step
- Modified the build script in package.json to run tests before the TypeScript compilation and aliasing steps.
- This change ensures that tests are executed as part of the build process, enhancing code reliability and quality assurance.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "test:fast": "jest --runInBand --silent",
     "test-watch": "jest --watchAll",
-    "build": "npm run lint && tsc --project tsconfig.build.json && tsc-alias",
+    "build": "npm run lint && npm run test && tsc --project tsconfig.build.json && tsc-alias",
     "build-fast": "tsc --project tsconfig.build.json && tsc-alias",
     "start": "node dist/server.js",
     "serve": "tsx watch src/server.ts",
